--- a/streamlit-app/requirements.txt
+++ b/streamlit-app/requirements.txt
@@ -1,3 +1,12 @@
 pandas
 streamlit-option-menu
 seaborn
+matplotlib.pyplot
+numpy
+sklearn.model_selection
+sklearn.linear_model
+sklearn.tree
+sklearn.neighbors
+sklearn.preprocessing
+scikit-learn
+PIL
